# auto_unassign_solved_topics

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  create_query_temp.py  debug_query_temp.py  docker-compose.yml  pyproject.toml  update_query_temp.py
.github/workflows/: ci.yml
adr/: 0001-core-architecture.md
app/: main.py
app/api/: health.py
app/clients/: assign.py  discourse.py  http.py  search.py
app/config/: settings.py
app/db/: base.py  models.py
app/logging/: setup.py
app/models/: domain.py
app/scheduler/: runner.py
app/services/: health.py  processor.py
app/state/: repository.py
tests/: test_health.py  test_processor.py  test_processor_unsolved.py  test_repository.py
